once game starts, question box is displayed to the user and welcome message as well as start button is no longer visible

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -52,3 +52,7 @@ h1 {
 .hide {
     display: none;
 }
+
+.visible {
+    visibility: visible;
+}
